--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,13 @@ buildscript {
 		classpath('me.champeau.gradle:gradle-javadoc-hotfix-plugin:0.1')
 		classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.2'
 		classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
+		classpath "com.netflix.nebula:gradle-extra-configurations-plugin:5.0.3"
 	}
 }
 
 plugins {
 	id "org.sonarqube" version "2.1"
+	id "nebula.optional-base" version "5.0.3"
 }
 
 group = 'org.springframework.session'
