--- a/spring-session/build.gradle
+++ b/spring-session/build.gradle
@@ -3,6 +3,7 @@ apply from: SPRING3_GRADLE
 apply from: MAVEN_GRADLE
 
 apply plugin: 'spring-io'
+apply plugin: "nebula.optional-base"
 
 description = "Spring Session"
 
@@ -16,17 +17,19 @@ configurations {
 
 dependencies {
 	compile "commons-logging:commons-logging:$commonsLoggingVersion"
-	optional "org.springframework.data:spring-data-redis:$springDataRedisVersion",
-			"com.hazelcast:hazelcast:$hazelcastVersion",
-			"org.springframework.data:spring-data-gemfire:$springDataGemFireVersion",
-			"org.springframework:spring-jdbc:$springVersion",
-			"org.springframework.data:spring-data-mongodb:$springDataMongoVersion",
-			"org.springframework:spring-context:$springVersion",
-			"org.springframework:spring-web:$springVersion",
-			"org.springframework:spring-messaging:$springVersion",
-			"org.springframework:spring-websocket:$springVersion",
-			"org.springframework.security:spring-security-core:$springSecurityVersion",
-			"org.springframework.security:spring-security-web:$springSecurityVersion"
+
+	compile "org.springframework.data:spring-data-redis:$springDataRedisVersion", optional
+	compile "com.hazelcast:hazelcast:$hazelcastVersion", optional
+	compile "org.springframework.data:spring-data-gemfire:$springDataGemFireVersion", optional
+	compile "org.springframework:spring-jdbc:$springVersion", optional
+	compile "org.springframework.data:spring-data-mongodb:$springDataMongoVersion", optional
+	compile "org.springframework:spring-context:$springVersion", optional
+	compile "org.springframework:spring-web:$springVersion", optional
+	compile "org.springframework:spring-messaging:$springVersion", optional
+	compile "org.springframework:spring-websocket:$springVersion", optional
+	compile "org.springframework.security:spring-security-core:$springSecurityVersion", optional
+	compile "org.springframework.security:spring-security-web:$springSecurityVersion", optional
+
 	provided "javax.servlet:javax.servlet-api:$servletApiVersion"
 	integrationTestCompile "redis.clients:jedis:$jedisVersion",
 			"org.apache.commons:commons-pool2:$commonsPoolVersion",
